# GamesLauncher-Back

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  azure-pipelines-develop.yml  azure-pipelines.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
GameCenter/: settings.py  urls.py  wsgi.py
GameCenter/apps/authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
GameCenter/apps/authentication/migrations/: 0001_initial.py  (+2 more)
GameCenter/apps/games/: models.py  serializers.py  urls.py  views.py
authentication/: groups.py  models.py  permissions.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
games/: models.py  serializers.py  storage.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_auto_20190317_0041.py  0002_auto_20190328_0857.py  0003_auto_20190317_0042.py  0004_auto_20190317_0044.py  0005_auto_20190317_0053.py  0006_auto_20190317_0136.py
games_launcher/: settings.py  urls.py  wsgi.py
games_launcher/apps/authentication/: __init__.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
games_launcher/apps/games/: models.py  storage.py  urls.py  views.py
launcher/: models.py  serializers.py  urls.py  views.py
launcher/migrations/: 0001_initial.py
postman/: GameCenter.postman_collection.json  GameCenter.postman_environment.json
postman_collection/: GameLauncher.postman_collection.json  run-api-tests.sh
steamkiller/: settings.py  urls.py  wsgi.py
steamkiller/launcher/: views.py
steamkiller/steamkiller/: urls.py
(+10 files in other folders)
